<resources>
    <string name="app_name">EmCast</string>
    <string name="app_label">Recent Podcasts</string>
    <string name="action_settings">Settings</string>


    // NetworkInfo
    <string name="wifi_connection">The active connection is wifi.</string>
    <string name="mobile_connection">The active connection is mobile.</string>
    <string name="no_wifi_or_mobile">No wireless or mobile connection.</string>
    <string name="mp3">Listen to MP3</string>
    <string name="mp4">Play MP4</string>
    <string name="twentyfour">24</string>
    <string name="feedback_title">Rate The Episode</string>
    <string name="feedback_text">what do you think of the posdcast you just heard?</string>
    <string name="one_text">Waste of time</string>
    <string name="two_text">Poor</string>
    <string name="three_text">Ok</string>
    <string name="four_text">Good</string>
    <string name="five_text">Excellent</string>
    <string name="bold">bold</string>


    <string name="ratingsuccess"><b>Submit Rating success</b></string>
    <string name="mainpage">Back to main page</string>

    <string name="ratingerror"><b>Error</b></string>
    <string name="cancel">Cancel</string>

    <string name="title_activity_media_playing">Media_playing</string>
    <string name="title_activity_mediaplayingmp4">Mediaplayingmp4</string>


</resources>
