<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/transparent">

    <ImageView
        android:id="@+id/Mp3Iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:layout_alignParentLeft="true"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/app_name"
        android:src="@drawable/icon_audio_only" />

    <TextView
        android:id="@+id/TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="2dp"
        android:text="@string/mp3"
        android:textColor="#ffffff" />
    <ImageView
        android:id="@+id/line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/img_line" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_background1"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/DcategoryTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:textColor="@color/category"
            android:textSize="@dimen/categoryTv" />

        <TextView
            android:id="@+id/DtitleTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/title_text" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:id="@+id/Ddivider"
            android:src="@drawable/divider" />

        <TextView
            android:id="@+id/DdescriptionTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/descriptiontextgap"
            android:gravity="center_horizontal"
            android:lines="3"
            android:paddingLeft="@dimen/descriptiontextgap"
            android:paddingRight="@dimen/descriptiontextgap"
            android:textColor="@color/white"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/clock_image"
                android:layout_height="@dimen/clock_image"
                android:src="@drawable/icon_clock"
                android:scaleType="fitXY" />

            <TextView
                android:id="@+id/DexistenceTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/white"
                android:textSize="@dimen/clock_text"
                 />

        </LinearLayout>
    </LinearLayout>
    <ImageView
        android:id="@+id/line2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/img_line" />
    <ImageView
        android:id="@+id/Mp4Iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_audio_image"
        android:layout_gravity="center_horizontal"
        android:adjustViewBounds="true"
       />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mp4"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffffff" />

</LinearLayout>